The title slide has the title and the author name.

--- a/themes/default/scss/screen.scss
+++ b/themes/default/scss/screen.scss
@@ -236,46 +236,57 @@ a {
 				}
 			}
 		}
-	// Cover
-	&.cover {
+	// Title
+	&.title {
         color: #FFF;
         background: #333;
 		h2 {
 			position:absolute;
-			top:45%;
+			top:40%;
 			left:96px;
 			right:96px;
 			font-size:72px;
             text-align: center;
 			}
-		@mixin cover {
+		h3 {
+			position:absolute;
+			top:55%;
+			left:96px;
+			right:96px;
+			font-size:28px;
+            text-align: center;
+			}
+        a {
+            color: #FFf;
+            }
+		@mixin title {
 			img, svg, video,
 			object, canvas, iframe {
 				@content;
 				}
 			}
-		@include cover {
+		@include title {
 			position:absolute;
 			top:0;
 			left:0;
 			z-index:-1;
 			}
 		&.w {
-			@include cover {
+			@include title {
 				top:50%;
 				width:100%;
 				transform:translateY(-50%);
 				}
 			}
 		&.h {
-			@include cover {
+			@include title {
 				left:50%;
 				height:100%;
 				transform:translateX(-50%);
 				}
 			}
 		&.w.h {
-			@include cover {
+			@include title {
 				top:0;
 				left:0;
 				transform:none;
