Use "haikimidori" for the background".

--- a/themes/default/css/screen.css
+++ b/themes/default/css/screen.css
@@ -69,8 +69,8 @@ a {
   position: relative;
   width: 1024px;
   height: 640px;
-  background: #FFF;
-  color: #333;
+  background: #e6eae3;
+  color: #000;
   -webkit-print-color-adjust: exact;
   -webkit-text-size-adjust: none;
   -moz-text-size-adjust: none;
