--- a/themes/default/scss/screen.scss
+++ b/themes/default/scss/screen.scss
@@ -57,8 +57,8 @@ a {
 	position:relative;
 	width:$width;
 	height:$height;
-	background:#FFF;
-	color:#333;
+	background:#e6eae3;
+	color:#000;
 	-webkit-print-color-adjust:exact;
 	-webkit-text-size-adjust:none;
 	-moz-text-size-adjust:none;
