Change the color of progressbar. Use the same color as the background of shout slides.

--- a/themes/default/css/screen.css
+++ b/themes/default/css/screen.css
@@ -417,7 +417,7 @@ a {
         bottom: 0;
         width: 0;
         height: 8px;
-        background: #52A2DF;
+        background: #7a4171;
         transition: width 0.2s linear; }
  }
 
