--- a/themes/default/scss/screen.scss
+++ b/themes/default/scss/screen.scss
@@ -544,7 +544,7 @@ a {
 				bottom:0;
 				width:0;
 				height:8px;
-				background:$color;
+				background: #7a4171;
 				transition:width 0.2s linear;
 				}
 			}
