--- a/themes/default/scss/screen.scss
+++ b/themes/default/scss/screen.scss
@@ -13,7 +13,7 @@ body {
 		}
 	}
 a {
-	color:$color;
+    color: #7a4171;
 	@include underline(currentColor, 0.09);
 	text-decoration:none;
 	}
@@ -257,7 +257,7 @@ a {
             text-align: center;
 			}
         a {
-            color: #FFf;
+            color: #7a4171;
             }
 		@mixin title {
 			img, svg, video,
