Use white for the color of links on the title slide.

--- a/themes/default/css/screen.css
+++ b/themes/default/css/screen.css
@@ -218,7 +218,7 @@ a {
     font-size: 28px;
     text-align: center; }
   .slide.title a {
-    color: #7a4171; }
+    color: #FFF; }
   .slide.title img, .slide.title svg, .slide.title video, .slide.title object, .slide.title canvas, .slide.title iframe {
     position: absolute;
     top: 0;
