--- a/themes/default/scss/screen.scss
+++ b/themes/default/scss/screen.scss
@@ -257,7 +257,7 @@ a {
             text-align: center;
 			}
         a {
-            color: #7a4171;
+            color: #FFF;
             }
 		@mixin title {
 			img, svg, video,
