--- a/themes/default/css/screen.css
+++ b/themes/default/css/screen.css
@@ -56,7 +56,7 @@ a {
   right: -50%;
   left: -50%;
   visibility: visible;
-  background: #52A2DF;
+  background: #7a4171;
   color: #FFF;
   text-align: center;
   transform-origin: 50% 100%;
@@ -182,7 +182,7 @@ a {
   .slide pre mark {
     padding: 5px 7px 1px; }
     .slide pre mark.important {
-      background: #52A2DF;
+      background: #7a4171;
       color: #FFF; }
     .slide pre mark.comment {
       padding: 0;
@@ -194,12 +194,12 @@ a {
   border-collapse: collapse;
   border-spacing: 0; }
   .slide table th, .slide table td {
-    background: linear-gradient(to top, #52A2DF, #52A2DF 0.055em, transparent 0.055em, transparent) repeat-x; }
+    background: linear-gradient(to top, #7a4171, #7a4171 0.055em, transparent 0.055em, transparent) repeat-x; }
   .slide table th {
     text-align: left;
     font-weight: bold; }
   .slide table.striped tr:nth-child(even) {
-    background: #f1f7fc; }
+    background: #f4eff3; }
 .slide.title {
   color: #FFF;
   background: #333; }
@@ -352,9 +352,9 @@ a {
       .list .slide:hover:before {
         box-shadow: 0 0 0 1px #EEE, 0 0 0 12px rgba(255, 255, 255, 0.5); }
       .list .slide:target:before {
-        box-shadow: 0 0 10px 0 #3c96db, 0 0 0 12px #52A2DF; }
+        box-shadow: 0 0 10px 0 #693862, 0 0 0 12px #7a4171; }
       .list .slide:target:after {
-        color: #52A2DF; }
+        color: #7a4171; }
       .list .slide > div:before {
         position: absolute;
         top: 0;
