--- a/themes/default/scss/screen.scss
+++ b/themes/default/scss/screen.scss
@@ -400,7 +400,7 @@ a {
 		position:absolute;
 		clip:rect(0, auto, auto, 0); // Having fun with IE10
 		padding:50px 0 50px 50px;
-		background:desaturate(lighten($color, 30%), 60%);
+		background:desaturate(lighten(#52A2DF, 30%), 60%);
 		text-align:center;
 		// Outfit
 		.caption,
