Use "#c4a3bf" for the color of links on the title slide.

--- a/themes/default/scss/defaults.scss
+++ b/themes/default/scss/defaults.scss
@@ -12,7 +12,7 @@ $break:1180px;  // Window width for small thumbnails to appear
 $ratio:'16x10'; // Available options: '16x10' or '4x3'
 
 // Colors
-$color:#7a4171;
+$color:#c4a3bf;
 $yellow:#FAFAC4;
 
 // Mixins
