--- a/themes/default/css/screen.css
+++ b/themes/default/css/screen.css
@@ -56,7 +56,7 @@ a {
   right: -50%;
   left: -50%;
   visibility: visible;
-  background: #7a4171;
+  background: #c4a3bf;
   color: #FFF;
   text-align: center;
   transform-origin: 50% 100%;
@@ -182,7 +182,7 @@ a {
   .slide pre mark {
     padding: 5px 7px 1px; }
     .slide pre mark.important {
-      background: #7a4171;
+      background: #c4a3bf;
       color: #FFF; }
     .slide pre mark.comment {
       padding: 0;
@@ -194,12 +194,12 @@ a {
   border-collapse: collapse;
   border-spacing: 0; }
   .slide table th, .slide table td {
-    background: linear-gradient(to top, #7a4171, #7a4171 0.055em, transparent 0.055em, transparent) repeat-x; }
+    background: linear-gradient(to top, #c4a3bf, #c4a3bf 0.055em, transparent 0.055em, transparent) repeat-x; }
   .slide table th {
     text-align: left;
     font-weight: bold; }
   .slide table.striped tr:nth-child(even) {
-    background: #f4eff3; }
+    background: #faf7f9; }
 .slide.title {
   color: #FFF;
   background: #333; }
@@ -218,7 +218,7 @@ a {
     font-size: 28px;
     text-align: center; }
   .slide.title a {
-    color: #FFF; }
+    color: #c4a3bf; }
   .slide.title img, .slide.title svg, .slide.title video, .slide.title object, .slide.title canvas, .slide.title iframe {
     position: absolute;
     top: 0;
@@ -352,9 +352,9 @@ a {
       .list .slide:hover:before {
         box-shadow: 0 0 0 1px #EEE, 0 0 0 12px rgba(255, 255, 255, 0.5); }
       .list .slide:target:before {
-        box-shadow: 0 0 10px 0 #693862, 0 0 0 12px #7a4171; }
+        box-shadow: 0 0 10px 0 #ba93b4, 0 0 0 12px #c4a3bf; }
       .list .slide:target:after {
-        color: #7a4171; }
+        color: #c4a3bf; }
       .list .slide > div:before {
         position: absolute;
         top: 0;
