--- a/themes/default/css/screen.css
+++ b/themes/default/css/screen.css
@@ -130,7 +130,8 @@ a {
 .slide sup {
   top: -0.5em; }
 .slide blockquote {
-  font-style: italic; }
+  font-style: italic;
+  margin-left: 80px; }
   .slide blockquote:before {
     position: absolute;
     margin: -49px 0 0 -100px;
