--- a/themes/default/scss/screen.scss
+++ b/themes/default/scss/screen.scss
@@ -142,6 +142,7 @@ a {
 	// Quote
 	blockquote {
 		font-style:italic;
+        margin-left: 80px;
 		&:before {
 			position:absolute;
 			margin:-49px 0 0 -100px;
